--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,10 +7,15 @@ datasources:
     url: ${DB_URI:`jdbc:postgresql://localhost:5432/teste`}
     driverClassName: org.postgresql.Driver
     username: ${DB_USER:postgres}
+    username2: ${DB_USER:postgres}
     password: ${DB_PASSWORD:postgres}
     schema-generate: CREATE_DROP
     dialect: ${DB_DIALECT:POSTGRES}
 
-jpa.default.properties.hibernate.hbm2ddl.auto: update
-jpa.default.properties.hibernate.show_sql: true
-jpa.default.properties.hibernate.format_sql: true
+teste:
+  url: "localhost:8080/teste"
+  ura: "localhost:8080/teste"
+  urb: "localhost:8080/teste"
+  urc: "localhost:8080/teste"
+  urd: "localhost:8080/teste"
+  ure: "localhost:8080/teste"
